--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-    "short_name": "Firebase のプッシュ通知購読アプリ",
-    "name": "Firebaseのプッシュ通知購読アプリ",
+    "short_name": "プッシュ通知購読アプリ",
+    "name": "プッシュ通知購読アプリ",
     "start_url": "notification.html",
     "gcm_sender_id": "261285297076"
   }
