--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,8 @@
     "short_name": "りーぎゃる",
     "name": "りーぎゃる",
     "start_url": "index.html",
-    "gcm_sender_id": "261285297076"
+    "gcm_sender_id": "261285297076",
+    "display": "fullscreen",
+    "theme_color": "#dff0d8",
+    "background_color": "#dff0d8"
   }
